--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>If you love to code as much as I do.</h3>
-            <p class="contact-messages">Love tea as much as I do? Let's talk about awesome they are! We can code while we have a cup of tea.</p>
+            <p class="contact-messages">Love tea as much as I do? Let's talk about how awesome they are! We can code while we have a cup of tea.</p>
             <a class="btn" href="rishabhraja85275@gmail.com">CONTACT ME</a>
         </div>
     </div>
